navbar height  & overlapping solved

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body {
   padding: 0 5% 0 5%;
   width: 100%;
   position: fixed;
+  z-index: +2;
 }
 
 header {
@@ -112,7 +113,7 @@ header {
 	/* flex-wrap: wrap; */
 	justify-content: space-between;
   align-items: center;
-	padding: 20px 0;
+	/* padding: 20px 0; */
 }
 
 header a,
